--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ layout: home
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="{{ site.baseurl }}assets/css/main.css" />
     <script src="js/main.js"></script>
     <style src="{{site.baseurl}}/js/post.js"></style>
@@ -17,9 +18,10 @@ layout: home
 <script src="ammap/maps/js/worldLow.js" type="text/javascript"></script>
     </head>
     <body>
-    {% include header.html %}
-    {% include middle.html %}
-    {% include footer.html %}
+     
+         {% include header.html %}
+         {% include middle.html %}
+         {% include footer.html %}
 
     <div id="fb-root"></div>
 <script>(function(d, s, id) {
