--- a/searchAll.html
+++ b/searchAll.html
@@ -16,6 +16,7 @@
     <div>
         <!-- Nav bar with social medias -->
         <div class="navBar"> 
+            <a href="#" class="socMed home" >{% include icons/home.html %}</a>
             <a href="#" class="socMed" >{% include icons/facebook.html %}</a>
             <a href="#" class="socMed" >{% include icons/insta.html %}</a>
             <a href="#" class="socMed" >{% include icons/twitter.html %}</a>
