--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: home
     <link rel="stylesheet" type="text/css" media="screen" href="{{ site.baseurl }}assets/css/main.css" />
     <script src="js/main.js"></script>
     <style src="{{site.baseurl}}/js/post.js"></style>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="ammap/ammap.js" type="text/javascript"></script>
 <link rel="stylesheet" href="ammap/ammap.css" type="text/css" media="all" />
 <script src="ammap/maps/js/worldLow.js" type="text/javascript"></script>
