--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ layout: home
 
     </head>
     <body>
+            {% include algolia.html %}
          {% include header.html %}
          {% include middle.html %}
          {% include footer.html %}
