--- a/searchAll.html
+++ b/searchAll.html
@@ -22,7 +22,7 @@
         <!-- end of Nav bar with social medias -->
     
 </div>
-
+{% include algolia.html %}
 <!--
 <div id="search-searchbar"></div>
 
