--- a/searchAll.html
+++ b/searchAll.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js/dist/instantsearch.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js/dist/instantsearch-theme-algolia.min.css">
 <base href="{{ site.baseurl }}">
+{% include algolia.html %}
 </head>
 
 <body>
