--- a/searchAll.html
+++ b/searchAll.html
@@ -30,8 +30,9 @@
     
 </div>
 
+<div class="flex-container">
 
-
+  <div class="bigger">
 <!-- All Posts -->
 <div>
     <div class="greyPost">
@@ -55,7 +56,9 @@
 </div>
 {% endfor %}
 </div>
+  </div>
 
+<div class="smaller">
 <div class="greyPost">
     <h2>Search by tags</h2>
   </div>
@@ -83,7 +86,8 @@
     </div>
 
 </div>
-
+</div>
+</div>
 
 
 
