--- a/searchAll.html
+++ b/searchAll.html
@@ -35,7 +35,7 @@
   <div class="bigger">
 <!-- All Posts -->
 <div>
-    <div class="greyPost">
+    <div class="grey">
         <h2>All Posts</h2>
       </div>
       <div class="flex-container table"></div>
@@ -59,7 +59,7 @@
   </div>
 
 <div class="smaller">
-<div class="greyPost">
+<div class="grey">
     <h2>Search by tags</h2>
   </div>
 {% for tag in tags %}
