--- a/searchAll.html
+++ b/searchAll.html
@@ -115,7 +115,8 @@
     </div>
     </div>
   -->
-  
+  <div>
+
     <h1 class="page-heading">Posts</h1>
 
     <div id="search-searchbar"></div>
@@ -138,6 +139,7 @@
     </div>
     {% include algolia.html %}
 
+</div>
   {% include footer.html %}
 
 </body>
