--- a/searchAll.html
+++ b/searchAll.html
@@ -68,14 +68,13 @@
 
 <div class="flex-container table">
     {% for post in site.tags[page.tag] %}
-    <div class="category-box">
-            <div class="whiteBox smallCategBlog">
-                    <a  href="{{site.baseurl}}{{ post.url }}">
-                        <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="beijing">
-                        <div class="smallBlogText">{{ post.blog_title }}
-                        <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
-                    </a>
-                    <div>
+    <div class="whiteBox smallBlog">
+        <a  href="{{site.baseurl}}{{post.url}}">
+            <img  class="postImg" src="{{ post.one_path }}" alt="{{post.title_description}}">
+            <div class="smallBlogText">{{ post.blog_title }}
+            <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
+        </a>
+    </div>
                          <div class="blogContainer"> 
                              {{ post.excerpt }}
                         </div>
