--- a/searchAll.html
+++ b/searchAll.html
@@ -40,7 +40,7 @@
       </div>
       <div class="flex-container table"></div>
 {% for post in site.posts %}
-<div class="category-box">
+<div class="category-box" style="padding: 0">
     <div class="whiteBox smallCategBlog">
             <a  href="{{site.baseurl}}{{ post.url }}">
                 <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="beijing">
