--- a/searchAll.html
+++ b/searchAll.html
@@ -38,6 +38,7 @@
     <div class="grey">
         <h2>All Posts</h2>
       </div>
+      <div>
 {% for post in site.posts %}
 <div class="category-box" style="padding: 0">
     <div class="whiteBox smallCategBlog">
@@ -54,6 +55,7 @@
     </div>
 </div>
 {% endfor %}
+</div>
 </div>
   </div>
 
