--- a/searchAll.html
+++ b/searchAll.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<div class="postHeading">
+ <div class="postHeading">
     <div>
         <!-- Nav bar with social medias -->
         <div class="navBar"> 
@@ -28,44 +28,41 @@
       </div>
         <!-- end of Nav bar with social medias -->
     
-</div>
+ </div>
 
-<div class="flex-container clearfix">
+ <div class="flex-container clearfix">
 
   <div class="bigger">
-<!-- All Posts -->
-<div>
+    <!-- All Posts -->
     <div class="grey">
         <h2>All Posts</h2>
-      </div>
+    </div>
 
-      <divclass="flex-container table">
-{% for post in site.posts %}
-<div class="blogEntry">       
-    <div class='blogTitle'>
-        <a href="{{site.baseurl}}{{post.url}}" class="blogLink"><h3 class="tithead">{{ post.name }}</h3></a>
-        <h4 class='titleDesc'>{{ title_description }} <span class='light'>{{ post.url | date: "%b %-d, %Y" }}</span> </h4>
-    </div>
-    <div>
-        <img class="bigPostImage" src="{{ post.one_path }}" alt="{{post.title_description}}">
-        <div>
-            <div class="blogContainer"> 
-             {{ post.excerpt }}
-            </div>
-            <a href="{{site.baseurl}}{{post.url}}"  class="readMore">Read more...</a>
-        </div>    
-    </div>
-</div>
+    <div class="flex-container table">
+      {% for post in site.posts %}
+      <div class="category-box">
+        <div class="whiteBox smallCategBlog">
+            <a  href="{{site.baseurl}}{{ post.url }}">
+                <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="beijing">
+                <div class="smallBlogText">{{ post.blog_title }}
+                <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
+            </a>
+            <div>
+                 <div class="blogContainer"> 
+                     {{ post.excerpt }}
+                </div>
+            </div>    
+       </div>
+      </div>
 {% endfor %}
-</div>
-</div>
   </div>
 
 <div class="smaller">
-<div class="grey">
+  <div class="grey">
     <h2>Search by tags</h2>
   </div>
-{% for tag in tags %}
+  <div>
+  {% for tag in tags %}
 <a href=# target="_blank"> {{ tag }} </a>
 {% endfor %}
 </div>
