--- a/searchAll.html
+++ b/searchAll.html
@@ -58,7 +58,7 @@
   </div>
  </div>
 
-<div class="smaller">
+<div class="smaller" class="margin:20px;">
    <div class="grey">
     <h2>Search by tags</h2>
    </div>
