--- a/searchAll.html
+++ b/searchAll.html
@@ -63,7 +63,7 @@
     <h2>Search by tags</h2>
    </div>
    <div>
-      {% for tag in tags %}
+      {% for tag in site.tags %}
         <a href=# target="_blank"> {{ tag }} </a>
       {% endfor %}
    </div>
