--- a/searchAll.html
+++ b/searchAll.html
@@ -69,6 +69,26 @@
    </div>
 </div>
 
+<div class="flex-container table">
+  {% for post in site.tags[page.tag] %}
+  <div class="category-box">
+          <div class="whiteBox smallCategBlog">
+                  <a  href="{{site.baseurl}}{{ post.url }}">
+                      <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="beijing">
+                      <div class="smallBlogText">{{ post.blog_title }}
+                      <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
+                  </a>
+                  <div>
+                       <div class="blogContainer"> 
+                           {{ post.excerpt }}
+                      </div>
+                  </div>    
+          </div>
+  </div>
+  {% endfor %}
+  </div>
+
+
 </div>
 <div>
   {% include footer.html %}
