--- a/searchAll.html
+++ b/searchAll.html
@@ -64,7 +64,7 @@
    </div>
    <div class="tagBox whiteBox">
       {% for tag in site.tags %}
-        <a href=# target="_blank"> {{ tag | first }} </a>
+        <a href=# > {{ tag | first }} </a>
       {% endfor %}
    </div>
 </div>
