--- a/searchAll.html
+++ b/searchAll.html
@@ -72,6 +72,14 @@
       {% endfor %}
    </div>
 </div>
+{% for tag in site.tags %}
+  <h2>{{ tag[0] }}</h2>
+  <ul>
+    {% for post in tag[1] %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+{% endfor %}
 
 <div class="flex-container table">
   {% for post in site.tags[page.tag] %}
