--- a/searchAll.html
+++ b/searchAll.html
@@ -68,7 +68,7 @@
    </div>
    <div class="tagBox whiteBox">
       {% for tag in tags %}
-        <a href="tag/{{ tag | slugify }}"  > {{ page.tag | first }} </a>
+        <a href="tag/{{ tag | slugify }}"  > {{ post.tag | first }} </a>
         {% for post in tag[1] %}
         <div class="category-box">
           <div class="whiteBox smallCategBlog">
