--- a/searchAll.html
+++ b/searchAll.html
@@ -86,20 +86,13 @@
 
   {% for tag in tags %}
 	<a href="/blog/tag/#{{ tag | slugify }}" target=_blank >{{ tag }}</a>
-	<ul>
+	<ul class="tagBox whiteBox">
 	 {% for post in site.posts %}
 		 {% if post.tags contains tag %}
-		 <li>
-		 <h3>
-		 <a href="{{ post.url }}">
+		 <li class="category-box"><h3><a href="{{ post.url }}">
 		 {{ post.title }}
 		 <small>{{ post.date | date_to_string }}</small>
-		 </a>
-		 {% for tag in post.tags %}
-			 <a class="tag" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
-		 {% endfor %}
-		 </h3>
-		 </li>
+		 </a></h3></li>
 		 {% endif %}
 	 {% endfor %}
 	</ul>
