--- a/searchAll.html
+++ b/searchAll.html
@@ -69,12 +69,12 @@
 
    {% for tag in tags %}
    <div class="whiteBox tagBox">
-  <a href="tag/{{ tag | slugify }}" target=_blank >{{ tag }}</a>
+  <a  style="font-size:5w" href="tag/{{ tag | slugify }}" target=_blank >{{ tag }}</a>
   </div>
 	<ul>
 	 {% for post in site.posts %}
 		 {% if post.tags contains tag %}
-		 <li class="category-box"><h3 class="whiteBox smallCategBlog"><a href="{{ post.url }}">
+		 <li style="color: black;" class="category-box"><h3 class="whiteBox smallCategBlog"><a href="{{ post.url }}">
 		 {{ post.title }}
 		 <small>{{ post.date | date_to_string }}</small>
 		 </a></h3></li>
