--- a/searchAll.html
+++ b/searchAll.html
@@ -76,7 +76,7 @@
 		 {% if post.tags contains tag %}
 		 <li style="color: black;" class="category-box"><h3 class="whiteBox smallCategBlog"><a href="{{ post.url }}">
 		 {{ post.title }}
-		 <small>{{ post.date | date_to_string }}</small>
+		 <small class="light">{{ post.date | date_to_string }}</small>
 		 </a></h3></li>
 		 {% endif %}
 	 {% endfor %}
