--- a/searchAll.html
+++ b/searchAll.html
@@ -18,7 +18,7 @@
 {% endif %}
 </head>
 
-<body>
+<body style="background-color: #f6f5f3;">
  <div class="postHeading">
     <div>
         <!-- Nav bar with social medias -->
