--- a/searchAll.html
+++ b/searchAll.html
@@ -38,8 +38,8 @@
 
   <div class="bigger">
     <!-- All Posts -->
-    <div class="grey">
-        <h2>All Posts</h2>
+    <div>
+        <h2 class="grey">All Posts</h2>
     </div>
 
     <div class="flex-container table">
