--- a/searchAll.html
+++ b/searchAll.html
@@ -62,8 +62,8 @@
  </div>
 
 <div class="smaller" style="margin:20px;">
-   <div class="grey">
-    <h2>Search by tags</h2>
+   <div>
+    <h2 class="grey">Search by tags</h2>
    </div>
 
    {% for tag in tags %}
