--- a/searchAll.html
+++ b/searchAll.html
@@ -68,7 +68,7 @@
 
    {% for tag in tags %}
    <div class="whiteBox tagBox">
-  <a class="tagSearch" style="font-size:3wv;" href="tag/{{ tag | slugify }}" target=_blank >{{ tag }}</a>
+  <a class="tagSearch" style="font-size:5wv;" href="tag/{{ tag | slugify }}" target=_blank >{{ tag }}</a>
   </div>
 	<ul>
 	 {% for post in site.posts %}
@@ -87,6 +87,8 @@
 
 
 {% include collecttags.html %}
+{% include algolia.html %}
+
 
 </div>
 <hr>
