--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: home
     <style src="{{site.baseurl}}/js/post.js"></style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="ammap/ammap.js" type="text/javascript"></script>
+    <title>Antiblog</title>
 <link rel="stylesheet" href="ammap/ammap.css" type="text/css" media="all" />
 <script src="ammap/maps/js/worldLow.js" type="text/javascript"></script>
 
