--- a/searchAll.html
+++ b/searchAll.html
@@ -46,7 +46,7 @@
       <div class="category-box">
         <div class="whiteBox smallCategBlog">
             <a  href="{{site.baseurl}}{{ post.url }}">
-                <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="beijing">
+                <img class="categ-img" src="{{site.baseurl}}{{ post.one_path }}" alt="{{ post.blog_title }}">
                 <div class="smallBlogText">{{ post.blog_title }}
                 <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
             </a>
