--- a/searchAll.html
+++ b/searchAll.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js/dist/instantsearch-theme-algolia.min.css">
 <base href="{{ site.baseurl }}">
 
-{% if site.tags == "" %}
+{% if site.tags != "" %}
   {% include collecttags.html %}
 {% endif %}
 </head>
