--- a/searchAll.html
+++ b/searchAll.html
@@ -2,6 +2,7 @@
 
 ---
 <head>
+<meta name="google-site-verification" content="fguzlGWAoTw81TgwYcL-PAv0ntWhAy3qdqed9_bqzxQ" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
